...

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final items = ref.watch(filteredLogProvider).reversed;
    return Scaffold(
      appBar: AppBar(
        title: const Text('Log'),
      ),
      body: Column(
        children: [
          Flexible(
            child: ListView(
              children: items.map((e) => LogEntryWidget(entry: e)).toList(),
...
