...
                      final fl = await _unarchive(ref, id: entry.relatedId!);
                      if (fl && context.mounted) {
                        context.go('/TodoEditorScreen');
                      }
                    }
                  },
                  child: const Text('Unarchive'),
                ),
              ],
            )
          : Container(),
    );
  }
...
