...
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                Flexible(
                  child: GestureDetector(
                    child: Text(
                      item.title != '' ? item.title : 'Title',
                      overflow: TextOverflow.ellipsis,
                      style: item.done
                          ? style?.copyWith(
                              decoration: TextDecoration.lineThrough)
                          : style,
                    ),
...
